--- a/utilities/pom.xml
+++ b/utilities/pom.xml
@@ -28,6 +28,8 @@
         <module>ui.content</module>
         <module>it.tests</module>
         <module>it.launcher</module>
+        <module>utility.core</module>
+        <module>utility.content</module>
     </modules>
 
     <properties>
@@ -512,7 +514,7 @@
             <dependency>
                 <groupId>com.adobe.aem</groupId>
                 <artifactId>uber-jar</artifactId>
-                <version>6.3.0</version>
+                <version>6.5.0</version>
                 <classifier>apis</classifier>
                 <scope>provided</scope>
             </dependency>
