--- a/utilities/utility.core/pom.xml
+++ b/utilities/utility.core/pom.xml
@@ -113,7 +113,11 @@
 			<artifactId>org.apache.felix.scr.annotations</artifactId>
 			<version>1.12.0</version>
 		</dependency>
-
+		<dependency>
+			<groupId>org.apache.geronimo.specs</groupId>
+			<artifactId>geronimo-atinject_1.0_spec</artifactId>
+			<scope>provided</scope>
+		</dependency>
 
 	</dependencies>
 </project>
